--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ arrayvec = "0.7"
 bimap = "0.6.3"
 bincode = "1.3.3"
 clap = { version = "4", features = ["derive"] }
+crossbeam = "0.8"
 crossbeam-channel = "0.5"
 crossbeam-deque = "0.8"
 document-features = "0.2"
