Fighting with rayon

--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -30,9 +30,10 @@ rhai = { workspace = true, optional = true }
 
 # wgpu
 heck = { workspace = true, optional = true }
-wgpu = { workspace = true, optional = true }
 pollster = { workspace = true, optional = true }
-crossbeam = { workspace = true, optional = true }
+rayon = { workspace = true, optional = true }
+thread_local = { workspace = true, optional = true }
+wgpu = { workspace = true, optional = true }
 
 workspace-hack = { version = "0.1", path = "../workspace-hack" }
 
@@ -62,7 +63,13 @@ jit = ["dep:dynasmrt", "dep:libc"]
 rhai = ["dep:rhai"]
 
 ## Enable WGPU shaders and rendering in the [`fidget::wpu`](crate::wgpu) module
-wgpu = ["dep:heck", "dep:wgpu", "dep:pollster", "dep:crossbeam"]
+wgpu = [
+    "dep:heck",
+    "dep:pollster",
+    "dep:rayon",
+    "dep:thread_local",
+    "dep:wgpu",
+]
 
 ## Enable `eval-tests` if you're writing your own evaluators and want to
 ## unit-test them.  When enabled, the crate exports a set of macros to test each
