--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,6 @@ arrayvec = "0.7"
 bimap = "0.6.3"
 bincode = "1.3.3"
 clap = { version = "4", features = ["derive"] }
-crossbeam = "0.8"
 crossbeam-channel = "0.5"
 crossbeam-deque = "0.8"
 document-features = "0.2"
@@ -55,6 +54,7 @@ serde = { version = "1.0", features = ["derive", "rc"] }
 static_assertions = "1"
 strum = { version = "0.26", features = ["derive"] }
 thiserror = "1"
+thread_local = "1.1"
 wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4"
 wgpu = "23.0.0"
