--- a/demos/web-editor/web/package.json
+++ b/demos/web-editor/web/package.json
@@ -1,24 +1,23 @@
 {
   "scripts": {
-    "build": "webpack --mode production",
-    "serve": "webpack serve",
-    "format": "prettier . --write"
+    "build-wasm": "cd ../crate && wasm-pack build --target web --release",
+    "build-web": "webpack --mode production",
+    "build-static": "cp src/index.html serve.json dist/",
+    "serve": "npm run build-wasm && npm run build-web && npm run build-static && serve -c serve.json dist"
   },
   "dependencies": {
     "@lezer/lr": "^1.0.0",
     "codemirror": "6.0.1"
   },
   "devDependencies": {
-    "@wasm-tool/wasm-pack-plugin": "1.5.0",
-    "html-webpack-plugin": "^5.3.2",
     "lezer-loader": "^0.3.0",
     "prettier": "3.2.5",
     "raw-loader": "^4.0.2",
+    "serve": "^14.2.4",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
     "webpack": "^5.49.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-cli": "^4.7.2"
   },
   "private": true
 }
