--- a/demos/cli/Cargo.toml
+++ b/demos/cli/Cargo.toml
@@ -11,6 +11,7 @@ env_logger.workspace = true
 image.workspace = true
 log.workspace = true
 nalgebra.workspace = true
+rayon.workspace = true
 
 fidget.path = "../../fidget"
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
