Add automatic shader validation to test suite

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,10 +27,12 @@ opt-level = 0
 
 [workspace.dependencies]
 anyhow = "1"
+approx = "0.5.1"
 arrayvec = "0.7"
 bimap = "0.6.3"
 bincode = "1.3.3"
 clap = { version = "4", features = ["derive"] }
+criterion = { version = "0.5", features = ["html_reports"] }
 crossbeam-channel = "0.5"
 crossbeam-deque = "0.8"
 document-features = "0.2"
@@ -43,6 +45,7 @@ ieee754 = "0.2"
 image = { version = "0.25", default-features = false, features = ["png"] }
 libc = "0.2"
 log = "0.4"
+naga = "23.0.0"
 nalgebra = "0.33"
 notify = "7.0"
 num-traits = "0.2"
