--- a/demos/web-editor/web/package.json
+++ b/demos/web-editor/web/package.json
@@ -18,7 +18,7 @@
     "serve": "^14.2.4",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
-    "webpack": "^5.49.0",
+    "webpack": ">=5.94.0",
     "webpack-cli": "^4.7.2"
   },
   "private": true
