--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ crossbeam-deque = "0.8"
 document-features = "0.2"
 dynasmrt = { version = "2.0" }
 eframe = { version = "0.29", default-features = false, features = [ "default_fonts", "glow"] }
-env_logger = "0.11.2"
+env_logger = { version = "0.11.2", default-features = false }
 getrandom = { version = "0.2", features = ["js"] }
 image = { version = "0.25", default-features = false, features = ["png"] }
 libc = "0.2"
