--- a/demos/cli/Cargo.toml
+++ b/demos/cli/Cargo.toml
@@ -18,7 +18,8 @@ workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 
 [features]
 jit = ["fidget/jit"]
-default = ["jit"]
+logger-full = ["env_logger/auto-color", "env_logger/humantime", "env_logger/regex"]
+default = ["jit", "logger-full"]
 
 [[bin]]
 name = "fidget-cli"
