--- a/workspace-hack/Cargo.toml
+++ b/workspace-hack/Cargo.toml
@@ -21,6 +21,8 @@ bytemuck = { version = "1", default-features = false, features = ["derive", "ext
 clap = { version = "4", features = ["derive"] }
 clap_builder = { version = "4", default-features = false, features = ["color", "help", "std", "suggestions", "usage"] }
 either = { version = "1", default-features = false, features = ["use_std"] }
+env_filter = { version = "0.1", default-features = false, features = ["regex"] }
+env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime", "regex"] }
 getrandom = { version = "0.2", default-features = false, features = ["std"] }
 num-traits = { version = "0.2", features = ["i128"] }
 once_cell = { version = "1" }
@@ -37,7 +39,6 @@ syn = { version = "2", features = ["extra-traits", "full"] }
 
 [target.x86_64-unknown-linux-gnu.dependencies]
 ahash = { version = "0.8" }
-anstream = { version = "0.6" }
 bitflags = { version = "2", default-features = false, features = ["std"] }
 libc = { version = "0.2" }
 log = { version = "0.4", default-features = false, features = ["std"] }
@@ -49,7 +50,6 @@ log = { version = "0.4", default-features = false, features = ["std"] }
 memchr = { version = "2" }
 
 [target.aarch64-apple-darwin.dependencies]
-anstream = { version = "0.6" }
 bitflags = { version = "2", default-features = false, features = ["std"] }
 libc = { version = "0.2" }
 
@@ -58,7 +58,6 @@ libc = { version = "0.2" }
 
 [target.aarch64-unknown-linux-gnu.dependencies]
 ahash = { version = "0.8" }
-anstream = { version = "0.6" }
 bitflags = { version = "2", default-features = false, features = ["std"] }
 libc = { version = "0.2" }
 log = { version = "0.4", default-features = false, features = ["std"] }
