--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ nalgebra = { version = "0.33", features = ["serde-serialize"] }
 notify = "7.0"
 num-traits = "0.2"
 ordered-float = "4"
+paste = "1.0"
 rand = "0.8.5"
 rayon = "1.10"
 rhai = { version = "1.17", features = ["sync"] }
