--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -16,6 +16,7 @@ document-features.workspace = true
 nalgebra.workspace = true
 num-traits.workspace = true
 ordered-float.workspace = true
+paste.workspace = true
 rand.workspace = true
 rayon.workspace = true
 serde.workspace = true
