--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ rayon = "1.10"
 rhai = { version = "1.17", features = ["sync"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 static_assertions = "1"
+strum = { version = "0.27", features = ["derive"] }
 thiserror = "1"
 wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4"
