--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,8 +35,8 @@ crossbeam-deque = "0.8"
 document-features = "0.2"
 dynasmrt = "3.0"
 eframe = "0.31"
-env_logger = { version = "0.11", default-features = false }
-image = { version = "0.25", default-features = false, features = ["png"] }
+env_logger = "0.11"
+image = "0.25"
 libc = "0.2"
 log = "0.4"
 nalgebra = { version = "0.33", features = ["serde-serialize"] }
