--- a/workspace-hack/Cargo.toml
+++ b/workspace-hack/Cargo.toml
@@ -18,54 +18,84 @@ edition = "2021"
 ahash = { version = "0.8", default-features = false, features = ["compile-time-rng", "no-rng", "runtime-rng", "std"] }
 approx = { version = "0.5" }
 bytemuck = { version = "1", default-features = false, features = ["derive", "extern_crate_alloc"] }
+byteorder = { version = "1" }
 clap = { version = "4", features = ["derive"] }
 clap_builder = { version = "4", default-features = false, features = ["color", "help", "std", "suggestions", "usage"] }
 either = { version = "1", default-features = false, features = ["use_std"] }
-env_filter = { version = "0.1", default-features = false, features = ["regex"] }
-env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime", "regex"] }
-getrandom = { version = "0.2", default-features = false, features = ["std"] }
+half = { version = "2" }
+num-rational = { version = "0.4" }
 num-traits = { version = "0.2", features = ["i128"] }
-once_cell = { version = "1" }
+once_cell = { version = "1", features = ["portable-atomic"] }
+profiling = { version = "1" }
 regex = { version = "1", default-features = false, features = ["perf", "std"] }
 regex-automata = { version = "0.4", default-features = false, features = ["dfa-onepass", "hybrid", "meta", "nfa-backtrack", "perf-inline", "perf-literal"] }
 serde = { version = "1", features = ["alloc", "derive", "rc"] }
+zerocopy = { version = "0.7", features = ["derive", "simd"] }
 
 [build-dependencies]
-getrandom = { version = "0.2", default-features = false, features = ["std"] }
-once_cell = { version = "1" }
+byteorder = { version = "1" }
+once_cell = { version = "1", features = ["portable-atomic"] }
 proc-macro2 = { version = "1" }
 quote = { version = "1" }
 syn = { version = "2", features = ["extra-traits", "full"] }
 
 [target.x86_64-unknown-linux-gnu.dependencies]
 ahash = { version = "0.8" }
+anstream = { version = "0.6" }
 bitflags = { version = "2", default-features = false, features = ["std"] }
-libc = { version = "0.2" }
+bytemuck = { version = "1", default-features = false, features = ["aarch64_simd"] }
+getrandom = { version = "0.2", default-features = false, features = ["std"] }
+hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
+image = { version = "0.25" }
+libc = { version = "0.2", features = ["extra_traits"] }
 log = { version = "0.4", default-features = false, features = ["std"] }
 memchr = { version = "2" }
+smallvec = { version = "1", default-features = false, features = ["const_new", "union"] }
 
 [target.x86_64-unknown-linux-gnu.build-dependencies]
-libc = { version = "0.2" }
+bitflags = { version = "2", default-features = false, features = ["std"] }
+getrandom = { version = "0.2", default-features = false, features = ["std"] }
+hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
+libc = { version = "0.2", features = ["extra_traits"] }
 log = { version = "0.4", default-features = false, features = ["std"] }
 memchr = { version = "2" }
+serde = { version = "1", features = ["alloc", "derive", "rc"] }
+syn = { version = "2", default-features = false, features = ["fold", "visit", "visit-mut"] }
 
 [target.aarch64-apple-darwin.dependencies]
+anstream = { version = "0.6" }
 bitflags = { version = "2", default-features = false, features = ["std"] }
+image = { version = "0.25" }
 libc = { version = "0.2" }
+log = { version = "0.4", default-features = false, features = ["std"] }
+smallvec = { version = "1", default-features = false, features = ["const_new", "union"] }
 
 [target.aarch64-apple-darwin.build-dependencies]
+bitflags = { version = "2", default-features = false, features = ["std"] }
 libc = { version = "0.2" }
+syn = { version = "2", default-features = false, features = ["fold", "visit"] }
 
 [target.aarch64-unknown-linux-gnu.dependencies]
 ahash = { version = "0.8" }
+anstream = { version = "0.6" }
 bitflags = { version = "2", default-features = false, features = ["std"] }
-libc = { version = "0.2" }
+bytemuck = { version = "1", default-features = false, features = ["aarch64_simd"] }
+getrandom = { version = "0.2", default-features = false, features = ["std"] }
+hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
+image = { version = "0.25" }
+libc = { version = "0.2", features = ["extra_traits"] }
 log = { version = "0.4", default-features = false, features = ["std"] }
 memchr = { version = "2" }
+smallvec = { version = "1", default-features = false, features = ["const_new", "union"] }
 
 [target.aarch64-unknown-linux-gnu.build-dependencies]
-libc = { version = "0.2" }
+bitflags = { version = "2", default-features = false, features = ["std"] }
+getrandom = { version = "0.2", default-features = false, features = ["std"] }
+hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
+libc = { version = "0.2", features = ["extra_traits"] }
 log = { version = "0.4", default-features = false, features = ["std"] }
 memchr = { version = "2" }
+serde = { version = "1", features = ["alloc", "derive", "rc"] }
+syn = { version = "2", default-features = false, features = ["fold", "visit", "visit-mut"] }
 
 ### END HAKARI SECTION
