--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ document-features = "0.2"
 dynasmrt = "3.0"
 eframe = "0.31"
 env_logger = "0.11"
-image = "0.25"
+image = { version = "0.25", default-features = false, features = ["png"] }
 libc = "0.2"
 log = "0.4"
 nalgebra = { version = "0.33", features = ["serde-serialize"] }
