--- a/.github/workflows/constraints-demo.yml
+++ b/.github/workflows/constraints-demo.yml
@@ -17,15 +17,9 @@ jobs:
         working-directory: ./demos/constraints
     steps:
     - uses: actions/checkout@v4
-    - uses: actions/cache@v4
+    - uses: ./.github/actions/rust-cache
       with:
-        path: |
-          ~/.cargo/bin/
-          ~/.cargo/registry/index/
-          ~/.cargo/registry/cache/
-          ~/.cargo/git/db/
-          target/
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+        cache-key: constraints
     - name: Install wasm target
       run: rustup target add wasm32-unknown-unknown
     - name: Install trunk
