Cleaning up Github Actions (#279)
Creates new composite Github Actions for common sequences of operations:

- Loading Rust folders from the Github cache
- `cargo check + clippy + fmt`

--- a/.github/workflows/check-aarch64.yml
+++ b/.github/workflows/check-aarch64.yml
@@ -22,20 +22,9 @@ jobs:
     runs-on: macos-14
     steps:
     - uses: actions/checkout@v4
-    - uses: actions/cache@v4
+    - uses: ./.github/actions/rust-cache
       with:
-        path: |
-          ~/.cargo/bin/
-          ~/.cargo/registry/index/
-          ~/.cargo/registry/cache/
-          ~/.cargo/git/db/
-          target/
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-check
-    - name: Install target
-      run: rustup target add ${{ matrix.target }}
-    - name: Check
-      run: cargo check --target=${{ matrix.target }} --all-targets --verbose
-    - name: Clippy
-      run: cargo clippy --target=${{ matrix.target }} --all-targets --verbose
-    - name: Check format
-      run: cargo fmt -- --check || exit 1
+        cache-key: check-aarch64
+    - uses: ./.github/actions/rust-check
+      with:
+        target: ${{ matrix.target }}
