--- a/demos/viewer/Cargo.toml
+++ b/demos/viewer/Cargo.toml
@@ -14,6 +14,7 @@ log.workspace = true
 nalgebra.workspace = true
 notify.workspace = true
 rhai.workspace = true
+zerocopy.workspace = true
 
 fidget.path = "../../fidget"
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
