Claude attempts to do 3D rendering

--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -21,6 +21,7 @@ rayon.workspace = true
 serde.workspace = true
 static_assertions.workspace = true
 thiserror.workspace = true
+zerocopy.workspace = true
 
 rhai = { workspace = true, optional = true }
 
