--- a/workspace-hack/Cargo.toml
+++ b/workspace-hack/Cargo.toml
@@ -27,8 +27,7 @@ once_cell = { version = "1", features = ["portable-atomic"] }
 regex = { version = "1", default-features = false, features = ["perf", "std"] }
 regex-automata = { version = "0.4", default-features = false, features = ["dfa-onepass", "hybrid", "meta", "nfa-backtrack", "perf-inline", "perf-literal"] }
 serde = { version = "1", features = ["alloc", "derive", "rc"] }
-zerocopy-c38e5c1d305a1b54 = { package = "zerocopy", version = "0.8", default-features = false, features = ["derive", "simd"] }
-zerocopy-ca01ad9e24f5d932 = { package = "zerocopy", version = "0.7", features = ["derive", "simd"] }
+zerocopy = { version = "0.7", features = ["derive", "simd"] }
 
 [build-dependencies]
 byteorder = { version = "1" }
