--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -13,6 +13,7 @@ arrayvec.workspace = true
 bimap.workspace = true
 crossbeam-deque.workspace = true
 document-features.workspace = true
+facet.workspace = true
 nalgebra.workspace = true
 num-traits.workspace = true
 ordered-float.workspace = true
