--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ dynasmrt = "3.0"
 eframe = { version = "0.31", features = ["wgpu"] }
 facet = { version = "0.2", features = ["reflect"] }
 env_logger = "0.11"
+heck = { version = "0.5" }
 image = { version = "0.25", default-features = false, features = ["png"] }
 libc = "0.2"
 log = "0.4"
