--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -14,6 +14,7 @@ bimap.workspace = true
 crossbeam-deque.workspace = true
 document-features.workspace = true
 facet.workspace = true
+heck.workspace = true
 nalgebra.workspace = true
 num-traits.workspace = true
 ordered-float.workspace = true
