--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ crossbeam-deque = "0.8"
 document-features = "0.2"
 dynasmrt = "3.0"
 eframe = { version = "0.31", features = ["wgpu"] }
-facet = { version = "0.2", features = ["reflect"] }
+facet = { git = "https://github.com/facet-rs/facet", features = ["reflect"] }
 env_logger = "0.11"
 heck = { version = "0.5" }
 image = { version = "0.25", default-features = false, features = ["png"] }
