Steps towards a standard library (#300)
- Use [`facet`](https://github.com/facet-rs/facet) for reflection on our
  shapes, generating Rhai bindings at runtime
- Add `vec2,3,4` types with GLSL-style functions
- Remove `core.rhai` and `core.rs`

--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -7,12 +7,15 @@ repository = "https://github.com/mkeeter/fidget"
 description = "Infrastructure for complex closed-form implicit surfaces"
 authors = ["Matt Keeter <matt.j.keeter@gmail.com"]
 readme = "../README.md"
+rust-version = "1.86"
 
 [dependencies]
 arrayvec.workspace = true
 bimap.workspace = true
 crossbeam-deque.workspace = true
 document-features.workspace = true
+facet.workspace = true
+heck.workspace = true
 nalgebra.workspace = true
 num-traits.workspace = true
 ordered-float.workspace = true
