--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ crossbeam-deque = "0.8"
 document-features = "0.2"
 dynasmrt = "3.0"
 eframe = { version = "0.31", features = ["wgpu"] }
+enum-map = "2.7.3"
 facet = { version = "0.8.1", features = ["reflect"] }
 env_logger = "0.11"
 heck = { version = "0.5" }
