--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -14,6 +14,7 @@ arrayvec.workspace = true
 bimap.workspace = true
 crossbeam-deque.workspace = true
 document-features.workspace = true
+enum-map.workspace = true
 facet.workspace = true
 heck.workspace = true
 nalgebra.workspace = true
@@ -23,6 +24,7 @@ rand.workspace = true
 rayon.workspace = true
 serde.workspace = true
 static_assertions.workspace = true
+strum.workspace = true
 thiserror.workspace = true
 zerocopy.workspace = true
 
