--- a/demos/cli/Cargo.toml
+++ b/demos/cli/Cargo.toml
@@ -11,9 +11,12 @@ env_logger.workspace = true
 image.workspace = true
 log.workspace = true
 nalgebra.workspace = true
+pollster.workspace = true
 rayon.workspace = true
 rhai.workspace = true
 strum.workspace = true
+wgpu.workspace = true
+zerocopy.workspace = true
 
 fidget.path = "../../fidget"
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
