--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -26,13 +26,18 @@ strum.workspace = true
 thiserror.workspace = true
 zerocopy.workspace = true
 
+# rhai
 rhai = { workspace = true, optional = true }
 
-workspace-hack = { version = "0.1", path = "../workspace-hack" }
+# wgpu
+pollster = { workspace = true, optional = true }
+wgpu = { workspace = true, optional = true }
 
 # JIT
 dynasmrt = { workspace = true, optional = true }
 libc = { workspace = true, optional = true }
+
+workspace-hack = { version = "0.1", path = "../workspace-hack" }
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows.workspace = true
@@ -44,7 +49,7 @@ getrandom-02 = { package = "getrandom", version = "0.2", features = ["js"] }
 rhai = { workspace = true, optional = true, features = ["wasm-bindgen"] }
 
 [features]
-default = ["jit", "rhai"]
+default = ["jit", "rhai", "wgpu"]
 
 ## Enables fast evaluation via a JIT compiler.  This is exposed in the
 ## [`fidget::jit`](crate::jit) module, and is supported on macOS, Linux, and
@@ -57,6 +62,8 @@ jit = ["dep:dynasmrt", "dep:libc"]
 ## Enable [Rhai](https://rhai.rs/) bindings, in the
 ## [`fidget::rhai`](crate::rhai) module
 rhai = ["dep:rhai"]
+
+wgpu = ["dep:pollster", "dep:wgpu"]
 
 ## Enable `eval-tests` if you're writing your own evaluators and want to
 ## unit-test them.  When enabled, the crate exports a set of macros to test each
