Minimal fidget-core split

--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fidget"
-version = "0.3.10"
+version = "0.4.0"
 edition = "2024"
 license = "MPL-2.0"
 repository = "https://github.com/mkeeter/fidget"
@@ -10,38 +10,7 @@ readme = "../README.md"
 rust-version = "1.87"
 
 [dependencies]
-arrayvec.workspace = true
-bimap.workspace = true
-document-features.workspace = true
-enum-map.workspace = true
-facet.workspace = true
-heck.workspace = true
-nalgebra.workspace = true
-ordered-float.workspace = true
-rand.workspace = true
-rayon.workspace = true
-serde.workspace = true
-static_assertions.workspace = true
-strum.workspace = true
-thiserror.workspace = true
-zerocopy.workspace = true
-
-rhai = { workspace = true, optional = true }
-
-workspace-hack = { version = "0.1", path = "../workspace-hack" }
-
-# JIT
-dynasmrt = { workspace = true, optional = true }
-libc = { workspace = true, optional = true }
-
-[target.'cfg(target_os = "windows")'.dependencies]
-windows.workspace = true
-
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-# Feature unification hacks to get webassembly working
-getrandom-03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
-getrandom-02 = { package = "getrandom", version = "0.2", features = ["js"] }
-rhai = { workspace = true, optional = true, features = ["wasm-bindgen"] }
+fidget-core = { path = "../fidget-core", version = "=0.4.0" }
 
 [features]
 default = ["jit", "rhai"]
@@ -52,20 +21,11 @@ default = ["jit", "rhai"]
 ## disable the feature on specific platforms
 ## ([Cargo issue](https://github.com/rust-lang/cargo/issues/1197));
 ## users will have to disable it manually via `default-features = false`.
-jit = ["dep:dynasmrt", "dep:libc"]
+jit = ["fidget-core/jit"]
 
 ## Enable [Rhai](https://rhai.rs/) bindings, in the
 ## [`fidget::rhai`](crate::rhai) module
-rhai = ["dep:rhai"]
-
-## Enable `eval-tests` if you're writing your own evaluators and want to
-## unit-test them.  When enabled, the crate exports a set of macros to test each
-## evaluator type, e.g. `float_slice_tests!(...)`.
-eval-tests = []
-
-[dev-dependencies]
-criterion = { version = "0.5", features = ["html_reports"] }
-approx = "0.5.1"
+rhai = ["fidget-core/rhai"]
 
 [[bench]]
 name = "render"
@@ -81,3 +41,7 @@ harness = false
 
 [lib]
 bench = false
+
+[dev-dependencies]
+criterion = { version = "0.5", features = ["html_reports"] }
+rayon.workspace = true
