--- a/fidget-core/Cargo.toml
+++ b/fidget-core/Cargo.toml
@@ -7,7 +7,7 @@ repository = "https://github.com/mkeeter/fidget"
 description = "Infrastructure for complex closed-form implicit surfaces"
 authors = ["Matt Keeter <matt.j.keeter@gmail.com"]
 readme = "../README.md"
-rust-version = "1.87"
+rust-version.workspace = true
 
 [dependencies]
 arrayvec.workspace = true
